# azSegFace

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  dnn_semantic_face_ex.cpp  dnn_semantic_face_train_ex.cpp  dnn_semantic_segmentation_net.cpp  dnn_semantic_segmentation_net.h  dnn_semantic_segmentation_train_ex.cpp
dlib-19.15/dlib/: CMakeLists.txt
nets/: semantic_face_net.dnn  semantic_segmentation_voc2012net.dnn
voc_utl/: license.txt
